# solana-staking-app

./: Cargo.toml
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
tests/: initialize_pool.rs
